2011-03-13  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_get_back_ptr_info, GC_print_obj,
	GC_print_smashed_obj, GC_debug_free_inner): Add a code for a
	LINT-like tool to instruct it that the function is invoked only
	with valid parameters (otherwise a SEGV is ok); recognize LINT2
	new macro.
	* misc.c (GC_abort): Instruct a LINT-like tool that the function
	never returns in fact.
	* os_dep.c (GC_linux_stack_base): Check for read buffer overflow;
	close the file immediately after read; use STRTOULL() instead of
	decoding the address number manually.
	* include/private/gc_priv.h (EXPECT): Don't specify outcome for a
	LINT-like tool.
	* include/private/gc_priv.h (GC_all_interior_pointers): Instruct a
	LINT-like tool that the value is restricted to zero and one only
	(required since the variable is global and its value is used as a
	part of array index expression is some places).

2011-03-13  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_make_closure): Fix SEGV in case GC_malloc returns
	NULL.
	* dbg_mlc.c (GC_debug_register_finalizer,
	GC_debug_register_finalizer_no_order,
	GC_debug_register_finalizer_unreachable,
	GC_debug_register_finalizer_ignore_self): Handle out of memory
	case properly (similar to GC_register_finalizer_inner).
	* headers.c (GC_install_header): Handle the case when alloc_hdr()
	returns NULL.
	* os_dep.c (GC_get_maps_len): Defend against missing "maps" file.
	* pthread_support.c (GC_mark_thread): Place a dummy return
	statement (which uses "id" argument) before the actual use of "id"
	as an array index (to suppress a warning produced by some static
	code analysis tools).
	* win32_threads.c (GC_mark_thread): Ditto.
	* pthread_support.c (GC_thr_init): Abort (with the appropriate
	message) if out of memory.

2011-03-13  Ivan Maidanski  <ivmai@mail.ru>

	* finalize.c (GC_register_finalizer_inner): Fix a typo in a
	comment.
	*include/private/gcconfig.h (STACKBOTTOM): Ditto.
	* gcj_mlc.c (GC_core_gcj_malloc): Replace 0/1 with TRUE/FALSE in